--- a/PrivacySandboxKotlin/client-app/src/main/res/layout/activity_main.xml
+++ b/PrivacySandboxKotlin/client-app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
           style="?android:attr/buttonBarButtonStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="Create File" />
+          android:text="Get Data" />
   </LinearLayout>
 
   <SurfaceView
